; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/win32/extr_d3d11_quad.c_D3D11_AllocateQuad.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/win32/extr_d3d11_quad.c_D3D11_AllocateQuad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { i32, i32, i32* }
%struct.TYPE_12__ = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [43 x i8] c"Constant buffers require 16-byte alignment\00", align 1
@D3D11_CPU_ACCESS_WRITE = common dso_local global i32 0, align 4
@D3D11_BIND_CONSTANT_BUFFER = common dso_local global i32 0, align 4
@D3D11_USAGE_DYNAMIC = common dso_local global i32 0, align 4
@PS_CONST_LUMI_BOUNDS = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [62 x i8] c"Could not create the pixel shader constant buffer. (hr=0x%lX)\00", align 1
@PS_CONST_COLORSPACE = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [64 x i8] c"Could not create the pixel shader colorspace buffer. (hr=0x%lX)\00", align 1
@PROJECTION_MODE_EQUIRECTANGULAR = common dso_local global i32 0, align 4
@PROJECTION_MODE_CUBEMAP_LAYOUT_STANDARD = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [63 x i8] c"Could not create the vertex shader constant buffer. (hr=0x%lX)\00", align 1
@VLC_SUCCESS = common dso_local global i32 0, align 4
@VLC_EGENERIC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @D3D11_AllocateQuad(i32* %0, %struct.TYPE_11__* %1, i32 %2, %struct.TYPE_10__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_10__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_12__, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_10__* %3, %struct.TYPE_10__** %9, align 8
  %12 = call i32 @static_assert(i32 0, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %13 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 0
  store i32 4, i32* %13, align 4
  %14 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 1
  %15 = load i32, i32* @D3D11_CPU_ACCESS_WRITE, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 2
  %17 = load i32, i32* @D3D11_BIND_CONSTANT_BUFFER, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 3
  %19 = load i32, i32* @D3D11_USAGE_DYNAMIC, align 4
  store i32 %19, i32* %18, align 4
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %23, i32 0, i32 2
  %25 = load i32*, i32** %24, align 8
  %26 = load i64, i64* @PS_CONST_LUMI_BOUNDS, align 8
  %27 = getelementptr inbounds i32, i32* %25, i64 %26
  %28 = call i32 @ID3D11Device_CreateBuffer(i32 %22, %struct.TYPE_12__* %11, i32* null, i32* %27)
  store i32 %28, i32* %10, align 4
  %29 = load i32, i32* %10, align 4
  %30 = call i64 @FAILED(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %4
  %33 = load i32*, i32** %6, align 8
  %34 = load i32, i32* %10, align 4
  %35 = call i32 @msg_Err(i32* %33, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.1, i64 0, i64 0), i32 %34)
  br label %93

36:                                               ; preds = %4
  %37 = call i32 @static_assert(i32 0, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 0
  store i32 4, i32* %38, align 4
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %43 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %42, i32 0, i32 2
  %44 = load i32*, i32** %43, align 8
  %45 = load i64, i64* @PS_CONST_COLORSPACE, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  %47 = call i32 @ID3D11Device_CreateBuffer(i32 %41, %struct.TYPE_12__* %11, i32* null, i32* %46)
  store i32 %47, i32* %10, align 4
  %48 = load i32, i32* %10, align 4
  %49 = call i64 @FAILED(i32 %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %55

51:                                               ; preds = %36
  %52 = load i32*, i32** %6, align 8
  %53 = load i32, i32* %10, align 4
  %54 = call i32 @msg_Err(i32* %52, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.2, i64 0, i64 0), i32 %53)
  br label %93

55:                                               ; preds = %36
  %56 = load i32, i32* %8, align 4
  %57 = load i32, i32* @PROJECTION_MODE_EQUIRECTANGULAR, align 4
  %58 = icmp eq i32 %56, %57
  br i1 %58, label %63, label %59

59:                                               ; preds = %55
  %60 = load i32, i32* %8, align 4
  %61 = load i32, i32* @PROJECTION_MODE_CUBEMAP_LAYOUT_STANDARD, align 4
  %62 = icmp eq i32 %60, %61
  br i1 %62, label %63, label %80

63:                                               ; preds = %59, %55
  %64 = call i32 @static_assert(i32 0, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %65 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 0
  store i32 4, i32* %65, align 4
  %66 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %67 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %66, i32 0, i32 0
  %68 = load i32, i32* %67, align 4
  %69 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %70 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %69, i32 0, i32 1
  %71 = call i32 @ID3D11Device_CreateBuffer(i32 %68, %struct.TYPE_12__* %11, i32* null, i32* %70)
  store i32 %71, i32* %10, align 4
  %72 = load i32, i32* %10, align 4
  %73 = call i64 @FAILED(i32 %72)
  %74 = icmp ne i64 %73, 0
  br i1 %74, label %75, label %79

75:                                               ; preds = %63
  %76 = load i32*, i32** %6, align 8
  %77 = load i32, i32* %10, align 4
  %78 = call i32 @msg_Err(i32* %76, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.3, i64 0, i64 0), i32 %77)
  br label %93

79:                                               ; preds = %63
  br label %80

80:                                               ; preds = %79, %59
  %81 = load i32*, i32** %6, align 8
  %82 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %83 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %84 = load i32, i32* %8, align 4
  %85 = call i32 @AllocQuadVertices(i32* %81, %struct.TYPE_11__* %82, %struct.TYPE_10__* %83, i32 %84)
  %86 = icmp ne i32 %85, 0
  br i1 %86, label %88, label %87

87:                                               ; preds = %80
  br label %93

88:                                               ; preds = %80
  %89 = load i32, i32* %8, align 4
  %90 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %91 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %90, i32 0, i32 0
  store i32 %89, i32* %91, align 8
  %92 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %92, i32* %5, align 4
  br label %97

93:                                               ; preds = %87, %75, %51, %32
  %94 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %95 = call i32 @D3D11_ReleaseQuad(%struct.TYPE_10__* %94)
  %96 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %96, i32* %5, align 4
  br label %97

97:                                               ; preds = %93, %88
  %98 = load i32, i32* %5, align 4
  ret i32 %98
}

declare dso_local i32 @static_assert(i32, i8*) #1

declare dso_local i32 @ID3D11Device_CreateBuffer(i32, %struct.TYPE_12__*, i32*, i32*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @msg_Err(i32*, i8*, i32) #1

declare dso_local i32 @AllocQuadVertices(i32*, %struct.TYPE_11__*, %struct.TYPE_10__*, i32) #1

declare dso_local i32 @D3D11_ReleaseQuad(%struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
